# excelrs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  biome.json  glue.ts  index.d.ts  index.js  native.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
__test__/: cell.test.ts  csv.test.ts  data-validation.test.ts  defined-names.test.ts  reader.test.ts  streaming-bridge.test.ts  style.test.ts  tables.test.ts  theme-color.test.ts  workbook.test.ts  workbook_xlsx.test.ts  worksheet.test.ts  xlsx-async-contract.test.ts
docs/: architecture-review-pass2.md  architecture-review.md  spec.md
fixtures/: custom-theme.xlsx
openspec/changes/fix-issue-3-release-hardening/: design.md  proposal.md  tasks.md
openspec/changes/npm-oidc-trusted-publishing/: design.md  tasks.md
openspec/changes/restore-getcell-compat-glue/: tasks.md
openspec/changes/streaming-hardening/: proposal.md
scripts/: apply-glue.cjs  streaming-smoke.cjs
src/: csv.rs  error.rs  lib.rs  stream-bridge.ts  stream.rs  stream_handle.rs  types.rs
src/model/: cell.rs  color.rs  column.rs  comment.rs  conditional_formatting.rs  data_validation.rs  defined_name.rs  header_footer.rs  image.rs  mod.rs  page_setup.rs  row.rs  sheet_protection.rs  sheet_view.rs  style.rs  table.rs  workbook.rs  workbook_inner.rs  workbook_view.rs  worksheet.rs
src/reader/: mod.rs  styles.rs  workbook.rs  xlsx.rs
src/writer/: mod.rs  styles.rs  xlsx.rs
src/xlsx/: handle.rs  mod.rs
(+146 files in other folders)
