[package]
name = "excelrs-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"
calamine = { version = "0.35", features = ["dates"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
zip = { version = "7", default-features = false, features = ["deflate"] }
quick-xml = "0.36"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[profile.release]
lto = true
strip = "symbols"
